# klippy-tooling

./: .gitignore  README-py.md  README-repo.md  README.md  build_helper_config.py  chelper-init.py  compile.py  klippy-patches.patch  pyproject.toml  setup.py
.ci/: Dockerfile.build  Dockerfile.build-github
.github/actions/klippy-build/: Dockerfile  Dockerfile.github  action.yml  github-run.sh
.github/workflows/: build-repackager.yml  generate-repo.yml  main.yml  sync-klipper-mirror.yml
mods/chelper/: __init__.py  builder.py
patches/: 0000-importlib.patch  0000-importlib_l.patch  0001-disable-compilation.patch  0002-hubctrl-no-sudo.patch  0003-builder.patch
