[build-system]
requires = ["setuptools>=63.0", "cffi", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "klippy"
version = "0.12.0.dev0+git.5dcd7ac"
description = "Klipper's host daemon" 
dependencies= [
	"cffi==1.15.1",
	"pyserial==3.4",
	"greenlet==1.1.2",
	"Jinja2==2.11.3",
	"python-can==3.3.4",
	"markupsafe==1.1.1"
]

[project.scripts]
klippy = "klippy.klippy:main"

[tool.setuptools.packages.find]
include = [
 "klippy",
 "klippy.*",
]

[tool.setuptools.package-data]
klippy = [ "config/*", "docs/*" ]
"klippy.extras" = [ "*.cfg" ]
"klippy.extras.display" = [ "*.cfg" ]

[tool.setuptools.exclude-package-data]
"klippy.chelper" = [
	"*.[ch]"
]



