[build-system]
requires = ["setuptools>=63.0", "cffi", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "klipper-klippy-l"
version = "0.12.0.dev280"
license.text = "GPL-3.0-only"
readme = "README-py.md"
description = "Klipper's host daemon - Unofficial repackage, includes patches" 
dependencies= [
	"cffi==1.15.1",
	"pyserial==3.4",
	"greenlet==2.0.2",
	"Jinja2==2.11.3",
	"python-can==3.3.4",
	"markupsafe==1.1.1"
]

[project.urls]
homepage = "https://github.com/laikulo/klippy"

[project.scripts]
klipper-klippy = "klippy.klippy:main"
klipper_klippy = "klippy.klippy:main"

[tool.setuptools.packages.find]
include = [
 "klippy",
 "klippy.*",
]

[tool.setuptools.package-data]
klippy = [ "config/*", "docs/*" ]
"klippy.extras" = [ "*.cfg" ]
"klippy.extras.display" = [ "*.cfg" ]

[tool.setuptools.exclude-package-data]
"klippy.chelper" = [
	"*.[ch]"
]



